src/objects/Lead/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
    <label>Round Robin  ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>