src/objects/Lead/fields/SalesLoft_Person_Stage__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Person_Stage__c</fullName>
    <label>SalesLoft Person Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>