src/objects/Lead/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <inlineHelpText>Alternate email for contact</inlineHelpText>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>