src/objects/Lead/fields/SL_ID__c.field-meta.xml
<CustomField>
    <fullName>SL_ID__c</fullName>
    <description>ID created during database scrub for SalesLoft contacts</description>
    <label>SL ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>