src/objects/Lead/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <formula>CASE(MONTH( MQL_Date__c ),
1, 134,
2, 97,
3, 74, 
4, 82, 
5, 89, 
6, 112,
7, 149,
8, 179,
9, 208,
10, 223,
11, 0,
12, 0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>