src/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>IF(ISBLANK(State), &quot;Unknown&quot;,
IF(CONTAINS(&quot;Alaska:Arizona:California:Hawaii:Nevada:Oregon:Utah:Washington:Idaho&quot;, State), &quot;West Coast&quot;,
IF(CONTAINS(&quot;Colorado:Montana:Kansas:Oklahoma:Texas:Wyoming:Alabama:Arkansas:Kentucky:Louisiana:Mississippi:Illinois:Indiana:Iowa:Michigan:Minnesota:Missouri:Nebraska:North Dakota:Ohio:South Dakota:Wisconsin:New Mexico:Tennessee&quot;, State), &quot;Central&quot;,
IF(CONTAINS(&quot;Connecticut:Maine:Massachusetts:New Hampshire:New York:Pennsylvania:Rhode Island:Vermont:District of Columbia:Delaware:Florida:Georgia:Maryland:North Carolina:New Jersey:South Carolina:Virginia:West Virginia&quot;, State), &quot;East Coast&quot;,
IF(CONTAINS(&quot;Alberta:British Columbia:Manitoba:New Brunswick:Newfoundland and Labrador:Nova Scotia:Ontario:Prince Edward Island:Quebec:Saskatchewan&quot;, State),&quot;Canada&quot;,
&quot;Other&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>