src/objects/Lead/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>IF( ISBLANK( Phone ),NULL, if( CONTAINS( &quot;206:209:213:253:310:323:360:408:415:425:503:509:510:530:559:562:604:619:626:650:661:702:707:714:760:775:778:805:818:831:858:867:909:916:925:949:951:971:424:442:541:657&quot;, LEFT( SUBSTITUTE( Phone, &quot;(&quot;, &quot;&quot;),3)),&quot;Pacific&quot;, 

IF( CONTAINS( &quot;208:250:303:307:385:403:406:435:480:505:520:602:623: 719:720:780:801:928:970:575&quot;, LEFT( SUBSTITUTE( Phone, &quot;(&quot;, &quot;&quot;),3)),&quot;Mountain&quot;, if( CONTAINS(&quot;204:205:210:214:217:218:224: 225:228:251:254:256:262:270:281:306:308:309:312:314:316:318:319:320:325:334:337:361:402:405: 409:414:417:430:432:469:479:501:504: 507:512:515:563:573:580:601:605:608:612:615:618:620:630:636:641:651:660:662:682:708: 712:713:715:731:763:769:773:785:806:815: 816:817:830:832:847:901:903:913:915:918:920:931:936:940:952:956:972:979:985:331:870&quot;, LEFT( SUBSTITUTE( Phone, &quot;(&quot;, &quot;&quot;),3)),&quot;Central&quot;, 

IF( CONTAINS(&quot;201:202:203:207:212:215:216:219:226:229:231:234: 239:240:248:252:267:269:276:289:301:302:304:305:313:315:321:330:336: 339:345:347:351:352:386:404:407:410:412:416:418:419:434:438:440:443:450:470:475:478:484:502:508:513:514:516:517:518:519:551:561:567: 570:571: 540:585:586:603:606:607:609:610:613:614:616:617:631:646: 647:649:678:703:704:705:706:716:717:718:724:727:732:734:740:754:757: 770:772:774:781:786:802:803:804:810:813:814:819:828:835:843:845:848: 856:857:859:860:862:863:864:865:876:878:904:905:908:910:912:914:917: 919:937:941:947:954:959:973:978:980:260:272:317:401:413:423:574:765: 812:989&quot;, LEFT( SUBSTITUTE( Phone, &quot;(&quot;, &quot;&quot;),3)),&quot;Eastern&quot;, 

IF( CONTAINS(&quot;800:877:856:866:844:888&quot;,LEFT( SUBSTITUTE(Phone, &quot;(&quot;,&quot;&quot;),3)),&quot;Toll Free&quot;, 

IF( CONTAINS(&quot;850:906&quot;,LEFT( SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;E or C&quot;, 

IF( CONTAINS(&quot;701&quot;,LEFT( SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;C or M&quot;, 

IF( CONTAINS(&quot;907:808&quot;,LEFT( SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;Their Own!&quot;, &quot;Unknown&quot; )))))))))</formula>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>