src/objects/Lead/fields/TMI_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>TMI_Revenue_Range__c</fullName>
    <label>TMI Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt; $2M</fullName>
            </value>
            <value>
                <fullName>$1M-$2M</fullName>
            </value>
            <value>
                <fullName>$500K-$1M</fullName>
            </value>
            <value>
                <fullName>$250K-$500K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>