src/objects/Lead/fields/Unlaunched_Pest_Business__c.field-meta.xml
<CustomField>
    <fullName>Unlaunched_Pest_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlaunched Pest Business</label>
    <type>Checkbox</type>
</CustomField>