src/objects/Lead/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <label>utm_content</label>
    <length>155</length>
    <type>Text</type>
</CustomField>