src/objects/Lead/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <label>utm_medium</label>
    <length>155</length>
    <type>Text</type>
</CustomField>