src/objects/Lead/fields/What_Time__c.field-meta.xml
<CustomField>
    <fullName>What_Time__c</fullName>
    <description>The time that the lead would like to see a demo at the tradeshow</description>
    <inlineHelpText>The time that the lead would like to see a demo at the tradeshow</inlineHelpText>
    <label>What Time?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>