src/objects/Lead/fields/Which_Day__c.field-meta.xml
<CustomField>
    <fullName>Which_Day__c</fullName>
    <description>The day that a lead would like to see a demo at the tradeshow.</description>
    <inlineHelpText>The day that a lead would like to see a demo at the tradeshow.</inlineHelpText>
    <label>Which Day?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tuesday, October 15th</fullName>
            </value>
            <value>
                <fullName>Wednesday, October 16th</fullName>
            </value>
            <value>
                <fullName>Thursday, October 17th</fullName>
            </value>
            <value>
                <fullName>Friday, October 18th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>