src/objects/Lead/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <description>Used by Lobster Marketing</description>
    <label>Years in Business</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>