src/objects/Lead/validationRules/Reason_for_Disqualification.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Disqualification</fullName>
    <active>true</active>
    <description>If a lead is marked as disqualified it must have a reason.</description>
    <errorConditionFormula>ISPICKVAL(  Status , &quot;Disqualified&quot;)&amp;&amp; ISPICKVAL(  Disqualified_Reason__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
    <errorMessage>If a lead is marked as disqualified it must have a reason.</errorMessage>
</ValidationRule>