src/objects/Lead/listViews/AA_East_Coast.listView-meta.xml
<ListView>
    <fullName>AA_East_Coast</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>LEAD.STATE_CODE</field>
        <operation>equals</operation>
        <value>GA</value>
    </filters>
    <label>AA East Coast</label>
</ListView>