src/objects/Lead/listViews/AA_Info_USA.listView-meta.xml
<ListView>
    <fullName>AA_Info_USA</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>InfoUSA</value>
    </filters>
    <filters>
        <field>LEAD.STATE_CODE</field>
        <operation>equals</operation>
        <value>DE,MD,VA,WV</value>
    </filters>
    <label>AA - Info USA</label>
</ListView>