src/objects/Lead/listViews/Active_Prospects.listView-meta.xml
<ListView>
    <fullName>Active_Prospects</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Last_Attempt_Date__c</columns>
    <columns>Last_Connect_Date__c</columns>
    <columns>Most_Recent_Cadence_Next_Due_Date__c</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Lead__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Prospects</label>
</ListView>