src/objects/Lead/listViews/All_Inbound_Leads.listView-meta.xml
<ListView>
    <fullName>All_Inbound_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Missed_SLA__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL</value>
    </filters>
    <label>All Inbound Leads</label>
</ListView>