src/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Last_Attempt_Date__c</columns>
    <columns>Last_Connect_Date__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <label>All Open Leads</label>
</ListView>