src/objects/Lead/listViews/AllOpenLeads_CK_712.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads_CK_712</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Last_Attempt_Date__c</columns>
    <columns>Last_Connect_Date__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Pest Control,Pest_Control</value>
    </filters>
    <filters>
        <field>LEAD.STATE_CODE</field>
        <operation>contains</operation>
        <value>AL</value>
    </filters>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>admin</value>
    </filters>
    <label>All Open Leads_CK_712</label>
</ListView>