src/objects/Lead/listViews/Andy_Leadlist.listView-meta.xml
<ListView>
    <fullName>Andy_Leadlist</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>MQL,Working,Reached,Qualified,Disqualified</value>
    </filters>
    <filters>
        <field>Last_Attempt_Date__c</field>
        <operation>lessThan</operation>
        <value>6/15/2019</value>
    </filters>
    <label>Andy_Leadlist</label>
</ListView>