src/objects/Lead/listViews/Auston_s_Untouched_Leads.listView-meta.xml
<ListView>
    <fullName>Auston_s_Untouched_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.URL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Working</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Anderson</value>
    </filters>
    <label>Auston&#39;s Untouched Leads</label>
</ListView>