src/objects/Lead/listViews/Baylor_lead_list.listView-meta.xml
<ListView>
    <fullName>Baylor_lead_list</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>greaterThan</operation>
        <value>7/1/2019</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Working,Qualified,Disqualified</value>
    </filters>
    <label>Baylor lead list</label>
</ListView>