src/objects/Lead/listViews/Inbound_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Inbound_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Inbound Lead Queue</label>
    <queue>Inbound_Lead_Queue</queue>
</ListView>